--- a/nodejs14-env-sync/root/projects/modeviewer/package.json
+++ b/nodejs14-env-sync/root/projects/modeviewer/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^4.15.6",
     "@babel/runtime": "^7.13.17",
     "@material-ui/core": "^4.11.3",
 	"@material-ui/icons": "^4.11.2",
