--- a/nodejs14-env-sync/root/projects/modeviewer/package.json
+++ b/nodejs14-env-sync/root/projects/modeviewer/package.json
@@ -23,6 +23,8 @@
     "material-icons": "^0.6.1",
 	"material-table": "^1.69.2",
     "material-ui": "^1.0.0-beta.47",
+    "oracledb": "^5.2",
+    "pg": "^8.7.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-draggable": "^4.4.3",
