--- a/maven33-env-sync/root/projects/DataMining/pom.xml
+++ b/maven33-env-sync/root/projects/DataMining/pom.xml
@@ -130,6 +130,11 @@
         <version>3.1</version>
       </plugin>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>3.2.0</version>
+      </plugin>
+      <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>buildnumber-maven-plugin</artifactId>
         <version>1.4</version>
