--- a/maven33-env-sync/root/projects/vipr2g/pom.xml
+++ b/maven33-env-sync/root/projects/vipr2g/pom.xml
@@ -77,6 +77,11 @@
       <artifactId>jjwt-api</artifactId>
       <version>0.11.2</version>
     </dependency>
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.6</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
