--- a/maven33-env-sync/root/projects/springboot/pom.xml
+++ b/maven33-env-sync/root/projects/springboot/pom.xml
@@ -117,6 +117,16 @@
       <artifactId>spring-boot-starter-actuator</artifactId>
       <version>2.2.2.RELEASE</version>
     </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.datatype</groupId>
+      <artifactId>jackson-datatype-hibernate5</artifactId>
+      <version>2.11.3</version>
+    </dependency>
+    <dependency>
+      <groupId>org.ow2.asm</groupId>
+      <artifactId>asm</artifactId>
+      <version>6.2</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
