disable mongodb-ee 4.4 repo in rhel7-thirdparty-repo-sync

--- a/rhel7-thirdparty-repo-sync/root/requirements.txt
+++ b/rhel7-thirdparty-repo-sync/root/requirements.txt
@@ -7,6 +7,6 @@ mongodb-enterprise-4.0
 mongodb-enterprise-4.1
 mongodb-enterprise-4.2
 mongodb-enterprise-4.3
-mongodb-enterprise-4.4
+#mongodb-enterprise-4.4
 docker-ee-stable
 docker-ce-stable
