python38-env-sync project updates

--- a/python38-env-sync/root/projects/mabk/requirements.txt
+++ b/python38-env-sync/root/projects/mabk/requirements.txt
@@ -10,3 +10,13 @@ keras
 statsmodels
 tensorflow
 torch
+theano
+scipy
+seaborn
+fuzzylab
+scikit-fuzzy
+pytest
+robot
+scikit-image
+selenium
+scrapy
