--- a/maven33-env-sync/root/projects/DataMining/pom.xml
+++ b/maven33-env-sync/root/projects/DataMining/pom.xml
@@ -89,6 +89,16 @@
       <artifactId>ojdbc6</artifactId>
       <version>11.2.0.4</version>
     </dependency>
+    <dependency>
+  <groupId>org.controlsfx</groupId>
+  <artifactId>controlsfx</artifactId>
+  <version>8.40.18</version>
+</dependency>
+<dependency>
+  <groupId>org.controlsfx</groupId>
+  <artifactId>controlsfx-samples</artifactId>
+  <version>8.40.18</version>
+</dependency>
   </dependencies>
   <build>
     <plugins>
