--- a/maven33-env-sync/root/projects/vipr2g/pom.xml
+++ b/maven33-env-sync/root/projects/vipr2g/pom.xml
@@ -98,6 +98,16 @@
       <version>1.5.2</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.controlsfx</groupId>
+      <artifactId>controlsfx</artifactId>
+      <version>8.40.18</version>
+    </dependency>
+    <dependency>
+      <groupId>org.controlsfx</groupId>
+      <artifactId>controlsfx-samples</artifactId>
+      <version>8.40.18</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
