--- a/maven33-env-sync/root/projects/springboot/pom.xml
+++ b/maven33-env-sync/root/projects/springboot/pom.xml
@@ -127,6 +127,12 @@
       <artifactId>asm</artifactId>
       <version>6.2</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-parent</artifactId>
+      <version>2.7.2</version>
+      <type>pom</type>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
@@ -134,7 +140,7 @@
       <plugin>
         <groupId>de.qaware.maven</groupId>
         <artifactId>go-offline-maven-plugin</artifactId>
-        <version>1.2.5</version>
+        <version>1.2.8</version>
         <configuration>
           <dynamicDependencies>
         </dynamicDependencies>
@@ -144,6 +150,12 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
+        <version>2.7.2</version>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <version>3.4.2</version>
       </plugin>
     </plugins>
   </build>
