--- a/maven33-env-sync/root/projects/springboot/pom.xml
+++ b/maven33-env-sync/root/projects/springboot/pom.xml
@@ -133,6 +133,11 @@
       <version>2.7.2</version>
       <type>pom</type>
     </dependency>
+    <dependency>
+      <groupId>org.modelmapper</groupId>
+      <artifactId>modelmapper</artifactId>
+      <version>2.4.5</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
