--- a/maven33-env-sync/root/projects/springboot/pom.xml
+++ b/maven33-env-sync/root/projects/springboot/pom.xml
@@ -137,6 +137,11 @@
       <artifactId>modelmapper</artifactId>
       <version>2.4.5</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.maven.surefire</groupId>
+      <artifactId>surefire-junit-platform</artifactId>
+      <version>2.22.2</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
