--- a/maven33-env-sync/root/projects/springboot/pom.xml
+++ b/maven33-env-sync/root/projects/springboot/pom.xml
@@ -142,6 +142,47 @@
       <artifactId>surefire-junit-platform</artifactId>
       <version>2.22.2</version>
     </dependency>
+    <dependency>
+      <groupId>com.blazebit</groupId>
+      <artifactId>blaze-persistence-entity-view-api</artifactId>
+      <version>1.6.7</version>
+    </dependency>
+    <dependency>
+      <groupId>com.blazebit</groupId>
+      <artifactId>blaze-persistence-core-api</artifactId>
+      <version>1.6.7</version>
+    </dependency>
+    <dependency>
+      <groupId>com.blazebit</groupId>
+      <artifactId>blaze-persistence-entity-view-impl</artifactId>
+      <version>1.6.7</version>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.blazebit</groupId>
+      <artifactId>blaze-persistence-integration-entity-view-spring</artifactId>
+      <version>1.6.7</version>
+    </dependency>
+    <dependency>
+      <groupId>com.blazebit</groupId>
+      <artifactId>blaze-persistence-integration-spring-data-2.7</artifactId>
+      <version>1.6.7</version>
+    </dependency>
+    <dependency>
+      <groupId>com.blazebit</groupId>
+      <artifactId>blaze-persistence-jpa-criteria-api</artifactId>
+      <version>1.6.7</version>
+    </dependency>
+    <dependency>
+      <groupId>com.blazebit</groupId>
+      <artifactId>blaze-persistence-jpa-criteria-impl</artifactId>
+      <version>1.6.7</version>
+    </dependency>
+    <dependency>
+      <groupId>com.blazebit</groupId>
+      <artifactId>blaze-persistence-jpa-criteria-jpa-2-compatibility</artifactId>
+      <version>1.6.7</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
