--- a/maven33-env-sync/root/projects/vipr-2g/pom.xml
+++ b/maven33-env-sync/root/projects/vipr-2g/pom.xml
@@ -108,6 +108,11 @@
       <artifactId>controlsfx-samples</artifactId>
       <version>8.40.18</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-collections4</artifactId>
+      <version>4.4</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
