--- a/docker-env-sync/root/.config/containers/registries.conf
+++ b/docker-env-sync/root/.config/containers/registries.conf
@@ -9,3 +9,8 @@ location = "192.168.0.11/registry-1.docker.io"
 prefix = "registry.access.redhat.com"
 insecure = true
 location = "192.168.0.11/registry.access.redhat.com"
+
+[[registry]]
+prefix = "registry1.dso.mil"
+insecure = true
+location = "192.168.0.11/registry1.dso.mil"
