--- a/python38-env-sync/root/projects/rmedina/requirements.txt
+++ b/python38-env-sync/root/projects/rmedina/requirements.txt
@@ -6,12 +6,12 @@ wheel
 
 # project specific
 altgraph
+json5
 networkx
 numpy
 ply
 psycopg2-binary
-pyinstaller; sys_platform == "win32"
-pyinstaller-hooks-contrib; sys_platform == "win32"
 pyinstaller-hooks-contrib
 PyXb
 scipy
+tk
