--- a/maven33-env-sync/root/projects/vipr-2g/pom.xml
+++ b/maven33-env-sync/root/projects/vipr-2g/pom.xml
@@ -148,6 +148,11 @@
         <version>3.11.4</version>
       </plugin>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
+        <version>3.2.1</version>
+      </plugin>
+      <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>exec-maven-plugin</artifactId>
         <version>3.0.0</version>
