--- a/docker-env-sync/root/projects/ewdms/requirements.txt
+++ b/docker-env-sync/root/projects/ewdms/requirements.txt
@@ -1,13 +1,13 @@
-docker.io/apache/nifi:1.8.0
-docker.io/apache/nifi:1.15.3
-docker.io/httpd:latest
-docker.io/jboss/wildfly:latest
-docker.io/mongo:latest
-docker.io/nginx:latest
-docker.io/postgres:latest
-docker.io/registry:latest
-registry.access.redhat.com/ubi7/nodejs-14:latest
+#docker.io/apache/nifi:1.8.0
+#docker.io/apache/nifi:1.15.3
+#docker.io/httpd:latest
+#docker.io/jboss/wildfly:latest
+#docker.io/mongo:latest
+#docker.io/nginx:latest
+#docker.io/postgres:latest
+#docker.io/registry:latest
+#registry.access.redhat.com/ubi7/nodejs-14:latest
 registry.access.redhat.com/ubi7/ubi-init:latest
 registry.access.redhat.com/ubi7/ubi:latest
 registry.access.redhat.com/ubi7/ubi-minimal:latest
-registry.access.redhat.com/ubi8/openjdk-8:latest
+#registry.access.redhat.com/ubi8/openjdk-8:latest
