--- a/maven33-env-sync/root/projects/springboot/pom.xml
+++ b/maven33-env-sync/root/projects/springboot/pom.xml
@@ -228,6 +228,11 @@
       <artifactId>pooled-jms</artifactId>
       <version>3.0.0</version>
     </dependency>
+      <dependency>
+      <groupId>javax.jms</groupId>
+      <artifactId>javax.jms-api</artifactId>
+      <version>2.0.1</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
