--- a/maven33-env-sync/root/projects/springboot/pom.xml
+++ b/maven33-env-sync/root/projects/springboot/pom.xml
@@ -233,6 +233,11 @@
       <artifactId>javax.jms-api</artifactId>
       <version>2.0.1</version>
     </dependency>
+    <dependency>
+      <groupId>org.openjdk.nashorn</groupId>
+      <artifactId>nashorn-core</artifactId>
+      <version>15.4</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
