ubi7/8 naming fixes

--- a/ubi8-repo-sync/Dockerfile
+++ b/ubi8-repo-sync/Dockerfile
@@ -13,4 +13,4 @@ COPY root/usr/local/bin/* /usr/local/bin/
 
 RUN chmod +x /usr/local/bin/*
 
-CMD ["rhel8-repo-sync.bash"]
+CMD ["ubi8-repo-sync.bash"]
