--- a/docker-env-sync/root/projects/portal/requirements.txt
+++ b/docker-env-sync/root/projects/portal/requirements.txt
@@ -1,2 +1,3 @@
 registry1.dso.mil/ironbank/opensource/redis/redis6:latest
 registry1.dso.mil/ironbank/opensource/nodejs/nodejs14:latest
+registry1.dso.mil/ironbank/opensource/nodejs/nodejs18:18.14.1
