--- a/maven33-env-sync/root/projects/vipr-2g/pom.xml
+++ b/maven33-env-sync/root/projects/vipr-2g/pom.xml
@@ -207,16 +207,9 @@
       </plugin>
       <plugin>
         <groupId>org.openjfx</groupId>
-        <artifactId>javafx-plugin</artifactId>
-        <version>0.0.13</version>
+        <artifactId>javafx-maven-plugin</artifactId>
+        <version>0.0.8</version>
       </plugin>
-      <!--
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>exec-maven-plugin</artifactId>
-        <version>3.1.0</version>
-      </plugin>
-      -->
     </plugins>
   </build>
   <reporting>
