--- a/maven33-env-sync/root/projects/vipr-2g/pom.xml
+++ b/maven33-env-sync/root/projects/vipr-2g/pom.xml
@@ -167,6 +167,11 @@
       <version>0.0.6</version>
       <type>pom</type>
     </dependency>
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>42.6.0</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
