--- a/docker-env-sync/root/projects/ewdms/requirements.txt
+++ b/docker-env-sync/root/projects/ewdms/requirements.txt
@@ -7,7 +7,7 @@
 #docker.io/postgres:latest
 #docker.io/registry:latest
 #registry.access.redhat.com/ubi7/nodejs-14:latest
-registry.access.redhat.com/ubi7/ubi-init:latest
-registry.access.redhat.com/ubi7/ubi:latest
-registry.access.redhat.com/ubi7/ubi-minimal:latest
+#registry.access.redhat.com/ubi7/ubi-init:latest
+#registry.access.redhat.com/ubi7/ubi:latest
+#registry.access.redhat.com/ubi7/ubi-minimal:latest
 #registry.access.redhat.com/ubi8/openjdk-8:latest
