--- a/maven33-env-sync/root/projects/tdms/pom.xml
+++ b/maven33-env-sync/root/projects/tdms/pom.xml
@@ -225,6 +225,19 @@
       <artifactId>spring-boot-devtools</artifactId>
       <version>2.7.9</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter</artifactId>
+      <version>2.7.9</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-parent -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-parent</artifactId>
+      <version>2.7.9</version>
+      <type>pom</type>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
