--- a/maven33-env-sync/root/projects/tdms/pom.xml
+++ b/maven33-env-sync/root/projects/tdms/pom.xml
@@ -8,6 +8,11 @@
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
+  <parent>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>2.7.9</version>
+  </parent>
   <dependencies>
     <dependency>
       <groupId>org.json</groupId>
