--- a/nodejs18-env-sync/root/projects/portal/package.json
+++ b/nodejs18-env-sync/root/projects/portal/package.json
@@ -35,6 +35,7 @@
     "node-esapi": "0.0.1"
   },
   "devDependencies": {
-    "jest": "^29.4.3"
+    "jest": "^29.4.3",
+    "prettier": "^2.8.8"
   }
 }
